[gd_scene load_steps=9 format=2]

[ext_resource path="res://Skills/Whip/Whip.gd" type="Script" id=1]
[ext_resource path="res://Skills/Whip/NPT100.png" type="Texture" id=2]
[ext_resource path="res://Skills/Whip/NPT101.png" type="Texture" id=3]
[ext_resource path="res://Skills/Whip/NPT103.png" type="Texture" id=4]
[ext_resource path="res://Skills/Whip/NPT102.png" type="Texture" id=5]
[ext_resource path="res://SFX/Whip.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 121, 66 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null, ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), null ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="Whip" type="Node2D"]
script = ExtResource( 1 )
whipCooldown = 1.5
damage = 75

[node name="WhipArea2D" type="Area2D" parent="."]
collision_mask = 2

[node name="WhipCollision" type="CollisionShape2D" parent="WhipArea2D"]
position = Vector2( 111, -11 )
shape = SubResource( 1 )
disabled = true

[node name="WhipCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 114.374, -11.198 )
scale = Vector2( 0.486286, 0.304639 )
frames = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="area_entered" from="WhipArea2D" to="." method="_on_WhipArea2D_area_entered"]
[connection signal="timeout" from="WhipCooldownTimer" to="." method="_on_WhipCooldownTimer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
